test/fail/suggest-long-ai.mo
//MOC-FLAG --ai-errors
import Prim "mo:⛔";

Prim.stableM;
